website/versioned_docs/version-0.0.4/api/cloud/cloud.nodejs.nodeserviceprops.md
---
id: version-0.0.4-cloud.nodejs.nodeserviceprops
title: nodejs.NodeServiceProps interface
hide_title: true
original_id: cloud.nodejs.nodeserviceprops
---
<!-- Do not edit this file. It is automatically generated by API Documenter. -->

[Cloud API Overview](overview) &gt; [@adpt/cloud](./cloud.md) &gt; [nodejs](./cloud.nodejs.md) &gt; [NodeServiceProps](./cloud.nodejs.nodeserviceprops.md)

## nodejs.NodeServiceProps interface

Props for [nodejs.NodeService()](./cloud.nodejs.nodeservice.md)<!-- -->.

<b>Signature:</b>

```typescript
export interface NodeServiceProps 
```

## Properties

|  Property | Type | Description |
|  --- | --- | --- |
|  [connectTo](./cloud.nodejs.nodeserviceprops.connectto.md) | <code>Handle &#124; Handle[]</code> | Handles for services that this component connects to. |
|  [deps](./cloud.nodejs.nodeserviceprops.deps.md) | <code>Handle &#124; Handle[]</code> | Dependencies that must be deployed before the Container image will build. |
|  [env](./cloud.nodejs.nodeserviceprops.env.md) | <code>Environment</code> | Object containing environment variables that the Container will be started with. |
|  [externalPort](./cloud.nodejs.nodeserviceprops.externalport.md) | <code>number</code> | The port that the NetworkService will expose. |
|  [port](./cloud.nodejs.nodeserviceprops.port.md) | <code>number</code> | The port number that the Node Container will use. |
|  [scope](./cloud.nodejs.nodeserviceprops.scope.md) | <code>NetworkServiceScope</code> | Scope within which the NetworkService will be exposed. |
|  [srcDir](./cloud.nodejs.nodeserviceprops.srcdir.md) | <code>string</code> | Root directory (which contains package.json) for the Node.js app source code. |
